# obs-studio-ftl

./: .gitignore  .gitmodules  services.json
UI/: audio-encoders.cpp  audio-encoders.hpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
build_script/: build-ubuntu.sh  build.bat
cmake/Modules/: CopyMSVCBins.cmake  FindFFmpeg.cmake  ObsCpack.cmake
libobs/: obs-windows.c  obs.h
libobs-d3d11/: d3d11-stagesurf.cpp  d3d11-texture2d.cpp
obs/: audio-encoders.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp
plugins/: CMakeLists.txt
plugins/ftl-services/: CMakeLists.txt  ftl-beam.c  ftl-format-ver.h  ftl-services-main.c  lookup-config.h.in
plugins/ftl-services/data/: package.json  services.json
plugins/libftl/: CMakeLists.txt
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-opus.c  obs-ffmpeg.c
plugins/obs-outputs/: CMakeLists.txt  ftl-stream.c  obs-outputs.c
plugins/obs-outputs/libftl/: activate.c  ftl.c  ftl.h  stream_configuration.c
plugins/obs-outputs/libftl/posix/: socket.c
plugins/obs-outputs/libftl/win32/: socket.c
